Adapt to iDempiere release-7.1 and java 11